--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "deep-equal": "^2.2.1",
+    "fabric": "^5.3.0",
+    "jquery": "^3.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "styled-component": "^2.8.0",
+    "styled-components": "^6.0.0-rc.3",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
