--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "fabric": "^5.3.0",
     "jquery": "^3.7.0",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.0-rc.3",
